WIP/examples/polymarket/ctf-exchange/compile_results.txt
ctf-exchange v1 compile - Thu Apr 30 00:10:44 -03 2026
=================================
SKIP: common/ERC20.sol (no concrete contract — interface/library/abstract)
SKIP: common/ReentrancyGuard.sol (no concrete contract — interface/library/abstract)
SKIP: common/auth/Authorized.sol (no concrete contract — interface/library/abstract)
SKIP: common/auth/Ownable.sol (no concrete contract — interface/library/abstract)
SKIP: common/auth/Owned.sol (no concrete contract — interface/library/abstract)
SKIP: common/auth/interfaces/IAuthorized.sol (no concrete contract — interface/library/abstract)
SKIP: common/auth/interfaces/IOwned.sol (no concrete contract — interface/library/abstract)
SKIP: common/interfaces/IERC20.sol (no concrete contract — interface/library/abstract)
SKIP: common/libraries/SafeTransferLib.sol (no concrete contract — interface/library/abstract)
FAIL: dev/TestHelper.sol
    error: [ParserError] Expected ',' but got '(' at forge-std/interfaces/IMulticall3.sol:1295-1296
    error: Compilation failed.
SKIP: dev/libraries/TestMath.sol (no concrete contract — interface/library/abstract)
PASS: dev/mocks/ERC1271Mock.sol
PASS: dev/mocks/ERC20.sol
FAIL: dev/mocks/USDC.sol
    error: [ParserError] Source "common/ERC20.sol" not found: File not found. Searched the following locations: "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/src/dev", "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/deps", "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/lib". at mocks/USDC.sol:58-103
    error: Compilation failed.
FAIL: dev/script/callTest.sol
    error: [ParserError] Expected ',' but got '(' at forge-std/interfaces/IMulticall3.sol:1295-1296
    error: Compilation failed.
FAIL: dev/script/ffi.sol
    error: [ParserError] Expected ',' but got '(' at forge-std/interfaces/IMulticall3.sol:1295-1296
    error: Compilation failed.
SKIP: dev/util/Ascii.sol (no concrete contract — interface/library/abstract)
FAIL: dev/util/Deployer.sol
    error: [ParserError] Expected ',' but got '(' at forge-std/interfaces/IMulticall3.sol:1295-1296
    error: Compilation failed.
FAIL: dev/util/Io.sol
    error: [ParserError] Expected ',' but got '(' at forge-std/interfaces/IMulticall3.sol:1295-1296
    error: Compilation failed.
FAIL: dev/util/Json.sol
    error: [ParserError] Expected ',' but got '(' at forge-std/interfaces/IMulticall3.sol:1295-1296
    error: Compilation failed.
SKIP: dev/util/Log.sol (no concrete contract — interface/library/abstract)
SKIP: dev/util/Predictor.sol (no concrete contract — interface/library/abstract)
SKIP: dev/util/Reader.sol (no concrete contract — interface/library/abstract)
SKIP: dev/util/vm.sol (no concrete contract — interface/library/abstract)
PASS: exchange/BaseExchange.sol
PASS: exchange/CTFExchange.sol
SKIP: exchange/interfaces/IAssetOperations.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/IAssets.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/IAuth.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/IConditionalTokens.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/IFees.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/IHashing.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/INonceManager.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/IPausable.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/IRegistry.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/ISignatures.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/interfaces/ITrading.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/libraries/CalculatorHelper.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/libraries/OrderStructs.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/libraries/PolyProxyLib.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/libraries/PolySafeLib.sol (no concrete contract — interface/library/abstract)
FAIL: exchange/libraries/TransferHelper.sol
    error: [ParserError] Source "common/libraries/SafeTransferLib.sol" not found: File not found. Searched the following locations: "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/src/exchange", "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/deps", "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/lib". at libraries/TransferHelper.sol:137-221
    error: Compilation failed.
FAIL: exchange/mixins/AssetOperations.sol
    error: [ParserError] Source "common/libraries/SafeTransferLib.sol" not found: File not found. Searched the following locations: "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/src/exchange", "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/deps", "/home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/WIP/examples/polymarket/ctf-exchange/lib". at libraries/TransferHelper.sol:137-221
    error: Compilation failed.
SKIP: exchange/mixins/Assets.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/Auth.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/Fees.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/Hashing.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/NonceManager.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/Pausable.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/PolyFactoryHelper.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/Registry.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/Signatures.sol (no concrete contract — interface/library/abstract)
SKIP: exchange/mixins/Trading.sol (no concrete contract — interface/library/abstract)

=================================
Passed: 4 | Failed: 9 | Skipped (no concrete contract): 40 | Total: 53
